; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/block/rsxx/extr_cregs.c_rsxx_read_hw_log.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/block/rsxx/extr_cregs.c_rsxx_read_hw_log.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsxx_cardinfo = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@CREG_OP_READ = common dso_local global i32 0, align 4
@CREG_ADD_LOG = common dso_local global i32 0, align 4
@read_hw_log_done = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Failed getting log text\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rsxx_read_hw_log(%struct.rsxx_cardinfo* %0) #0 {
  %2 = alloca %struct.rsxx_cardinfo*, align 8
  %3 = alloca i32, align 4
  store %struct.rsxx_cardinfo* %0, %struct.rsxx_cardinfo** %2, align 8
  %4 = load %struct.rsxx_cardinfo*, %struct.rsxx_cardinfo** %2, align 8
  %5 = load i32, i32* @CREG_OP_READ, align 4
  %6 = load i32, i32* @CREG_ADD_LOG, align 4
  %7 = load %struct.rsxx_cardinfo*, %struct.rsxx_cardinfo** %2, align 8
  %8 = getelementptr inbounds %struct.rsxx_cardinfo, %struct.rsxx_cardinfo* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @read_hw_log_done, align 4
  %12 = call i32 @creg_queue_cmd(%struct.rsxx_cardinfo* %4, i32 %5, i32 %6, i32 4, i32 %10, i32 1, i32 %11, i32* null)
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load %struct.rsxx_cardinfo*, %struct.rsxx_cardinfo** %2, align 8
  %17 = call i32 @CARD_TO_DEV(%struct.rsxx_cardinfo* %16)
  %18 = call i32 @dev_err(i32 %17, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %19

19:                                               ; preds = %15, %1
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @creg_queue_cmd(%struct.rsxx_cardinfo*, i32, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @dev_err(i32, i8*) #1

declare dso_local i32 @CARD_TO_DEV(%struct.rsxx_cardinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
